# evaluate_motion_primitives_from_trajectory_controller

./: README.md  package.xml  setup.cfg  setup.py
data/: trajectory_20250715_114057_executed.csv  trajectory_20250715_114057_planned.csv  trajectory_20250715_114057_reduced_LIN.csv  trajectory_20250715_114409_executed.csv  trajectory_20250715_114409_planned.csv  trajectory_20250715_114409_reduced_PTP.csv  trajectory_20250716_090701_planned.csv  trajectory_20250716_090701_reduced_LIN.csv  trajectory_20250716_091324_compare_cartesian_planned_vs_executed.webm  trajectory_20250716_091324_compare_planned_vs_reduced_LIN_cartesian.webm  trajectory_20250716_091324_executed.csv  trajectory_20250716_091324_planned.csv  trajectory_20250716_091324_reduced_LIN.csv  trajectory_20250716_092410_planned.csv  trajectory_20250716_092410_reduced_PTP.csv  trajectory_20250716_093119_compare_cartesian_planned_vs_executed.webm  trajectory_20250716_093119_executed.csv  trajectory_20250716_093119_planned.csv  trajectory_20250716_093119_reduced_PTP.csv  trajectory_20250716_093707_executed.csv  trajectory_20250716_093707_planned.csv  trajectory_20250716_093707_reduced_PTP.csv  trajectory_20250716_101518_compare_cartesian_planned_vs_executed.webm  trajectory_20250716_101518_executed.csv  trajectory_20250716_101518_planned.csv  trajectory_20250716_101518_reduced_LIN.csv  trajectory_20250716_101907_compare_cartesian_planned_vs_executed.webm  trajectory_20250716_101907_compare_planned_vs_reduced_LIN_cartesian.webm  trajectory_20250716_101907_executed.csv  trajectory_20250716_101907_planned.csv  (+49 more)
(+6 files in other folders)
