<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>evaluate_motion_primitives_from_trajectory_controller</name>
  <version>0.0.0</version>
  <description>Package to evaluate trajectory that is approximated using motion primitives</description>
  <maintainer email="mathias.fuhrer@b-robotized.com">Mathias Fuhrer</maintainer>
  <license>Apache-2.0</license>

  <!-- <depend>...</depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
